--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,10 @@ body{
     box-sizing: border-box;
     margin:0;
     padding: 0;
-    text-decoration: none;
     font-family: Roboto, sans-serif;
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #434455;
 }
 a{
@@ -18,9 +18,13 @@ ul, ol{
 .header_nav, h3 {
     font-weight: 500;
 }
+h3{
+    font-size: 20px;
+    line-height: 1.2;
+}
 h2{
     font-size: 36px;
-    line-height: 1.2;
+    line-height: 1.05;
 }
 h3, h2{
     color: #2E2F42;
@@ -36,6 +40,9 @@ h3, h2{
     text-transform: uppercase;
     font-family: Raleway;
     font-weight: bold;
+    font-size: 18px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
 }
 .logo a>span{
     color: #4D5AE5;
@@ -47,7 +54,8 @@ h3, h2{
 .header_address a{
     color: #434455;
 }
-.header_address a:hover{
+.header_address a:hover,
+.header_address a:focus{
     color: #404BBF;
 }
 .banner_main{
@@ -57,7 +65,7 @@ h3, h2{
         color: #fff;
         text-align: center;
         font-size: 56px;
-        line-height: 1.1;
+        line-height: 1.07;
 }
 .banner_main button{
     background-color: #4D5AE5;
@@ -65,7 +73,8 @@ h3, h2{
     font-weight: 500;
     cursor: pointer;
 }
-.banner_main button:hover{
+.banner_main button:hover
+.banner_main button:focus{
     background-color: #404BBF;
 }
 .our_team{
@@ -80,6 +89,10 @@ h3, h2{
 }
 .team_card img{
     text-align-last: left;
+}
+.our_portfolio img{
+    width: 360px;
+    height: 300px;
 }
 .footer_main{
     background-color: #2E2F42;
