--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ h3, h2{
     font-family: Raleway;
     font-weight: bold;
     font-size: 18px;
-    line-height: 1.2;
+    line-height: 1.16;
     letter-spacing: 0.03em;
 }
 .logo a>span{
@@ -69,6 +69,7 @@ h3, h2{
     text-align: center;
     font-size: 56px;
     line-height: 1.07;
+    letter-spacing: 0.02em;
 }
 .banner_main button{
     background-color: #4D5AE5;
